--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           src="./assets/avatar.png"
           alt="foto de mayk brito sorrindo, usando óculos e camisa preta, barba e fundo amarelo"
         />
-        <p>@pedropopulão</p>
+        <p>@maykbrito</p>
       </div>
 
       <div id="switch" onclick="togglemode()">
